--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,4 +12,9 @@ jobs:
       - image: cimg/node:15.3.0
     steps:
       - checkout
-      - run: node --version
+      - run:
+	      name: Install dependencies
+		    command: npm install
+	  - run:
+	      name: Run Tests
+		    command: npm run test
