--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,8 +13,8 @@ jobs:
     steps:
       - checkout
       - run:
-	      name: Install dependencies
-		    command: npm install
-	  - run:
-	      name: Run Tests
-		    command: npm run test
+	  name: Install Dependencies
+	  command: npm install
+      - run:
+          name: Run Tests
+	  command: npm run test
