--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 workflows:
   test-deploy:
     jobs:
-      - test
+      - test:
           filters:
             branches:
                only: rk
