--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
     docker:
       - image: cimg/node:15.3.0
     steps:
-      - checkout
+#       - checkout
 #       - run:
 #           name: Install Dependencies
 #           command: npm install
@@ -42,7 +42,7 @@ jobs:
     docker:
       - image: cimg/node:15.3.0
     steps:
-      - checkout
+#       - checkout
       - run:
           name: echo 
           command: echo 'This is test-stage'
@@ -51,7 +51,7 @@ jobs:
     docker:
       - image: cimg/node:15.3.0
     steps:
-      - checkout
+#       - checkout
       # https://discuss.circleci.com/t/deploying-examples/8093
       - run:
           name: Branch - RK
